[package]
name = "rust_wasm_encryption"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]


[dependencies]
wasm-bindgen = "0.2"
rsa = "0.5"
rand = "0.8.5"
once_cell = "1.18"               # Add this line to include the once_cell crate
getrandom = { version = "0.2", features = ["js"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.13"  # Add this line to include base64 crate
